--- a/environment.yml
+++ b/environment.yml
@@ -3,73 +3,83 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - blas=2.116=openblas
-  - blas-devel=3.9.0=16_osxarm64_openblas
-  - brotli=1.0.9=h1a8c8d9_8
-  - brotli-bin=1.0.9=h1a8c8d9_8
-  - ca-certificates=2022.12.7=h4653dfc_0
-  - certifi=2022.12.7=pyhd8ed1ab_0
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - contourpy=1.0.5=py39h525c30c_0
-  - cvxpy=1.1.15=py39hdf13c20_0
-  - cvxpy-base=1.1.15=py39h7f752ed_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - ecos=2.0.8=py39h20ef057_1
-  - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetype=2.10.4=h17b34a0_1
-  - giflib=5.2.1=h27ca646_2
-  - jpeg=9e=he4db4b2_2
-  - kiwisolver=1.4.4=py39h313beb8_0
-  - lcms2=2.14=h8193b64_0
-  - lerc=3.0=hc377ac9_0
-  - libblas=3.9.0=16_osxarm64_openblas
-  - libbrotlicommon=1.0.9=h1a8c8d9_8
-  - libbrotlidec=1.0.9=h1a8c8d9_8
-  - libbrotlienc=1.0.9=h1a8c8d9_8
-  - libcblas=3.9.0=16_osxarm64_openblas
-  - libcxx=14.0.6=h848a8c0_0
-  - libdeflate=1.8=h1a28f6b_5
-  - libffi=3.4.2=hca03da5_6
-  - libgfortran=5.0.0=11_3_0_hd922786_27
-  - libgfortran5=11.3.0=hdaf2cc0_27
-  - liblapack=3.9.0=16_osxarm64_openblas
-  - liblapacke=3.9.0=16_osxarm64_openblas
-  - libopenblas=0.3.21=openmp_hc731615_3
-  - libpng=1.6.37=hb8d0fd4_0
-  - libtiff=4.4.0=h2fd578a_2
-  - libwebp=1.2.4=h328b37c_0
-  - libwebp-base=1.2.4=h57fd34a_0
-  - llvm-openmp=15.0.7=h7cfbb63_0
-  - lz4-c=1.9.4=hb7217d7_0
-  - matplotlib=3.6.2=py39hca03da5_0
-  - matplotlib-base=3.6.2=py39h8bbb115_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - ncurses=6.4=h313beb8_0
-  - openblas=0.3.21=openmp_hf78f355_3
-  - openssl=1.1.1s=h03a7124_1
-  - osqp=0.6.2=py39h7f752ed_2
-  - packaging=23.0=pyhd8ed1ab_0
-  - pillow=9.3.0=py39h313beb8_2
-  - pip=22.3.1=py39hca03da5_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - python=3.9.12=hbdb9e5c_1
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.9=2_cp39
-  - qdldl-python=0.1.5=py39h7f752ed_1
-  - readline=8.2=h1a28f6b_0
-  - scipy=1.7.1=py39h5060c3b_0
-  - scs=2.1.4=py39h56a55e8_0
-  - setuptools=65.6.3=py39hca03da5_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.40.1=h7a7dc30_0
-  - tk=8.6.12=hb8d0fd4_0
-  - tornado=6.1=py39h5161555_1
-  - tqdm=4.64.1=pyhd8ed1ab_0
-  - tzdata=2022g=h04d1e81_0
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - xz=5.2.10=h80987f9_1
-  - zlib=1.2.13=h5a0b063_0
-  - zstd=1.5.2=h8574219_0
+  - black=22.6.0
+  - blas=2.116
+  - blas-devel=3.9.0
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
+  - ca-certificates=2023.01.10
+  - certifi=2022.12.7
+  - click=8.0.4
+  - colorama=0.4.6
+  - contourpy=1.0.5
+  - cvxpy=1.1.15
+  - cvxpy-base=1.1.15
+  - cycler=0.11.0
+  - ecos=2.0.7.post1
+  - fftw=3.3.9
+  - flit-core=3.6.0
+  - fonttools=4.25.0
+  - freetype=2.12.1
+  - giflib=5.2.1
+  - jpeg=9e
+  - kiwisolver=1.4.4
+  - lcms2=2.12
+  - lerc=3.0
+  - libblas=3.9.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libcblas=3.9.0
+  - libcxx=14.0.6
+  - libdeflate=1.8
+  - libffi=3.4.2
+  - libgfortran=5.0.0
+  - libgfortran5=11.3.0
+  - liblapack=3.9.0
+  - liblapacke=3.9.0
+  - libopenblas=0.3.21
+  - libpng=1.6.37
+  - libtiff=4.5.0
+  - libwebp=1.2.4
+  - libwebp-base=1.2.4
+  - llvm-openmp=14.0.6
+  - lz4-c=1.9.4
+  - matplotlib=3.6.2
+  - matplotlib-base=3.6.2
+  - munkres=1.1.4
+  - mypy_extensions=0.4.3
+  - ncurses=6.4
+  - numpy-base=1.23.5
+  - openblas=0.3.21
+  - openssl=1.1.1s
+  - osqp=0.6.2
+  - packaging=22.0
+  - pathspec=0.10.3
+  - pillow=9.3.0
+  - pip=22.3.1
+  - platformdirs=2.5.2
+  - pyparsing=3.0.9
+  - python=3.9.12
+  - python-dateutil=2.8.2
+  - python_abi=3.9
+  - qdldl-python=0.1.5
+  - readline=8.2
+  - scipy=1.9.3
+  - scs=2.1.4
+  - setuptools=65.6.3
+  - six=1.16.0
+  - sqlite=3.40.1
+  - tk=8.6.12
+  - tomli=2.0.1
+  - tornado=6.2
+  - tqdm=4.64.1
+  - typing_extensions=4.4.0
+  - tzdata=2022g
+  - wheel=0.37.1
+  - xz=5.2.10
+  - zlib=1.2.13
+  - zstd=1.5.2
   - pip:
       - joblib==1.2.0
       - numpy==1.22.4
